# FIB-Master

./: BiharmonicSolver.cpp  BiharmonicSolver.h  CMakeLists.txt  Image.cpp  Image.h  Quadtree.cpp  Quadtree.h  README.md  ScalarField.cpp  ScalarField.h  main.cpp  mesh.cpp  mesh.h  mesh_io.cpp  mesh_io.h  png_visualizer.cpp  points_generator.cpp  points_generator.h
data/: Batman_Logo.txt  Batman_Logo_Low.txt  Capsule_Low.txt  Capsule_Noise.txt  Circle_Low.txt  Circle_Noise.txt  Cocodrile_Clip.txt  Crocodile_Clip.txt  Crocodile_Clip_Low.txt  Crocodile_clip_v1.2.stl  Key_Low.txt  Pharmacy_Cross.txt  Pharmacy_Cross_Low.txt  Superman_Logo.txt  Superman_Logo_Low.txt  Suzane.txt  Suzane_Holes_Low.txt  Suzane_Low.txt  Suzanne_Holes.txt  capsuleNoCaps.txt  circle1000.txt  circle1000noise2.txt  genPoints.py  key.txt  points.txt
